<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TYP_DC_MOTOR_STATUS" Id="{832f0d31-2fff-4bfb-ab02-95eec06ea284}">
    <Declaration><![CDATA[TYPE TYP_DC_MOTOR_STATUS :
STRUCT
	ReachedHP : BOOL;
	ReachedWP : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>